--- a/questionnaire-post.html
+++ b/questionnaire-post.html
@@ -1,116 +1,254 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>CS4249 Assignment 1</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/style.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>CS4249 Assignment 1</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+</head>
+
+<body>
+    <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html">Welcome</a></li>
-                        <li><a href="questionnaire-pre.html">Pre Questionnaire</a></li>
-                        <li><a href="instructions.html">Instructions</a></li>
-                        <li><a href="experiment.html">Experiment</a></li>
-                        <li class="active"><a href="questionnaire-post.html">Post Questionnaire</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
+    <nav class="navbar navbar-default">
         <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h1>Post-Experiment Questionnaire</h1>
-                    <hr>
-                    <p>This part of the interface collects whatever post-experiment information. After the experiment, you want to collect more qualitative and quantitative feedback about the tested techniques. Some of the typical questions include, personal preferences, any difficulties participants experienced in the experiment, and areas of improvement. Please design a basic post-experimental questionnaire (no more than 10 questions).</p>
-
-                    <p>Current participant: <span class="js-pid pid"></span></p>
-
-                    <form id="post-expt-form">
-                        <div class="form-group">
-                            <label for="q1">Question 1 - Text</label>
-                            <input type="text" class="form-control" id="q1" name="q1" placeholder="Enter answer">
-                        </div>
-                        <div class="form-group">
-                            <label for="q2">Question 2 - Radio</label>
-                            <div class="radio">
-                              <label>
-                                <input type="radio" name="q2" id="optionsRadios1" value="radio1">
-                                Radio response 1
-                              </label>
-                            </div>
-                            <div class="radio">
-                              <label>
-                                <input type="radio" name="q2" id="optionsRadios2" value="radio2">
-                                Radio response 2
-                              </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="q3">Question 3 - Checkbox</label>
-                            <div class="checkbox">
-                              <label>
-                                <input type="checkbox" name="q3" value="checkbox1">
-                                Checkbox response 1
-                              </label>
-                            </div>
-                            <div class="checkbox">
-                              <label>
-                                <input type="checkbox" name="q3" value="checkbox2">
-                                Checkbox response 2
-                              </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="q4">Question 4 - Select Options</label>
-                            <select class="form-control" name="q4">
-                                <option value="option1">Option response 1</option>
-                                <option value="option2">Option response 2</option>
-                                <option value="option3">Option response 3</option>
-                                <option value="option4">Option response 4</option>
-                                <option value="option1">Option response 5</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="q5">Question 5 - Textarea</label>
-                            <textarea class="form-control" id="q5" name="q5" placeholder="Enter response"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                    </form>
-                </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Welcome</a></li>
+                    <li><a href="questionnaire-pre.html">Pre Questionnaire</a></li>
+                    <li><a href="instructions.html">Instructions</a></li>
+                    <li><a href="experiment.html">Experiment</a></li>
+                    <li class="active"><a href="questionnaire-post.html">Post Questionnaire</a></li>
+                </ul>
             </div>
         </div>
+    </nav>
 
-        <script src="js/vendor/jquery-1.11.2.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/DataStorage.js"></script>
-        <script src="js/ACPToolKit.js"></script>
-        <script src="js/main.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h1>Post-Experiment Questionnaire</h1>
+                <hr>
+                <!--This part of the interface collects whatever post-experiment information. After the experiment, you want to collect more qualitative and quantitative feedback about the tested techniques. Some of the typical questions include, personal preferences, any difficulties participants experienced in the experiment, and areas of improvement. Please design a basic post-experimental questionnaire (no more than 10 questions).-->
 
-        <script>
-            $(function () {
-                $('#post-expt-form').submit(function (event) {
-                    event.preventDefault();
-                    var formResponses = $(this).serializeArray();
-                    // Do your own form validation here.
-                    ACPToolKit.downloadFormData(formResponses, 'post');
-                    ACPToolKit.clearAllData();
-                    alert('Thank you for your participation!');
-                });
+                <p>Participant No: <span class="js-pid pid"></span></p>
+                <p>Thank you for your participation in the experiment! Just one last thing before we can properly conclude the session. Please fill in the information for all the fields below.</p>
+
+
+
+                <form id="post-expt-form">
+
+                    <div class="form-group">
+                        <label for="q1">AutoComPaste is easy to learn.</label>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q1" id="optionsRadios1" value="radio1">
+                                Strongly disagree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q1" id="optionsRadios2" value="radio2">
+                                Disagree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q1" id="optionsRadios3" value="radio3">
+                                Neutral
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q1" id="optionsRadios4" value="radio4">
+                                Agree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q1" id="optionsRadios5" value="radio5">
+                                Strongly Agree
+                              </label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="q2">AutoComPaste is easy to use.</label>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q2" id="optionsRadios1" value="radio1">
+                                Strongly disagree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q2" id="optionsRadios2" value="radio2">
+                                Disagree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q2" id="optionsRadios3" value="radio3">
+                                Neutral
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q2" id="optionsRadios4" value="radio4">
+                                Agree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q2" id="optionsRadios5" value="radio5">
+                                Strongly Agree
+                              </label>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="q3">AutoComPaste is easier to pick up as compared to CTRL-C and CTRL-V.</label>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q3" id="optionsRadios1" value="radio1">
+                                Strongly disagree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q3" id="optionsRadios2" value="radio2">
+                                Disagree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q3" id="optionsRadios3" value="radio3">
+                                Neutral
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q3" id="optionsRadios4" value="radio4">
+                                Agree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q3" id="optionsRadios5" value="radio5">
+                                Strongly Agree
+                              </label>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="q4">AutoComPaste is easier to use as compared to CTRL-C and CTRL-V.</label>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q4" id="optionsRadios1" value="radio1">
+                                Strongly disagree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q4" id="optionsRadios2" value="radio2">
+                                Disagree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q4" id="optionsRadios3" value="radio3">
+                                Neutral
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q4" id="optionsRadios4" value="radio4">
+                                Agree
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q4" id="optionsRadios5" value="radio5">
+                                Strongly Agree
+                              </label>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="q5">Which technique of copying and pasting do you prefer using?</label>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q5" id="optionsRadios1" value="radio1">
+                                CTRL-C and CTRL-V
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q5" id="optionsRadios2" value="radio2">
+                                AutoComPaste
+                              </label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="q6">Why?</label>
+                        <textarea class="form-control" id="q6" name="q6" placeholder="Enter response"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="q7">What difﬁculties did you face or experience during the course of the experiment?</label>
+                        <textarea class="form-control" id="q7" name="q7" placeholder="Enter response"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="q8">Are there any areas of improvement that can be made?</label>
+                        <textarea class="form-control" id="q8" name="q8" placeholder="Enter response"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="q9">Do you have any other feedback?</label>
+                        <textarea class="form-control" id="q9" name="q9" placeholder="Enter response"></textarea>
+                    </div>
+
+
+                    <p>Thank you very much for your participation and invaluable feedback!</p>
+
+                    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/vendor/jquery-1.11.2.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/DataStorage.js"></script>
+    <script src="js/ACPToolKit.js"></script>
+    <script src="js/main.js"></script>
+
+    <script>
+        $(function() {
+            $('#post-expt-form').submit(function(event) {
+                event.preventDefault();
+                var formResponses = $(this).serializeArray();
+                // Do your own form validation here.
+                ACPToolKit.downloadFormData(formResponses, 'post');
+                ACPToolKit.clearAllData();
+                alert('Thank you for your participation!');
             });
-        </script>
-    </body>
+        });
+
+    </script>
+</body>
+
 </html>
