--- a/experiment.html
+++ b/experiment.html
@@ -138,7 +138,7 @@
                 trialData.push(row);
             }
 
-            if (currentTrial == 3) {
+            if (currentTrial + 1 == 3) {
                 breakTime;
             }
 
