--- a/experiment.html
+++ b/experiment.html
@@ -138,10 +138,6 @@
                 trialData.push(row);
             }
 
-            if (currentTrial + 1 == 3) {
-                breakTime;
-            }
-
             if (currentTrial < totalNumberOfTrials) {
                 ACPToolKit.presentTrial(trialsData[currentTrial]);
                 currentTrial += 1;
@@ -164,7 +160,10 @@
                 totalNumberOfTrials = trialsData.length;
                 $('.js-expt-num-trials').text(totalNumberOfTrials);
                 trialData.push(headers);
-                next();
+                if (currentTrial + 1 == 3)
+                    breaktime();
+                else
+                    next();
                 pid = ACPToolKit.getCurrentParticipantId();
             })
         });
